--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stop Watch</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    
+    	
+	<div class="watch">
+		<div class="time">
+			00:00:00
+		</div>
+		<div class="controls">
+			<button id="start">Start</button>
+			<button id="stop">Stop</button>
+			<button id="reset">Reset</button>
+		</div>
+	</div>
+
+	<script src="script.js"></script>
 </body>
 </html>
